# pyapp_docker_example

./: .pre-commit-config.yaml  README.md  justfile  manage.py  playground.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml
deploy/: Dockerfile  Dockerfile.binary
deploy/etc/s6-overlay/s6-rc.d/server/: run
deploy/etc/s6-overlay/s6-rc.d/setup/: up
deploy/etc/s6-overlay/s6-rc.d/worker/: run
deploy/etc/s6-overlay/scripts/: db-prepare.sh
docs/: conf.py  requirements.txt
pyapp_docker_example/: __main__.py  asgi.py  settings.py  urls.py  wsgi.py
pyapp_docker_example/core/: apps.py  types.py
pyapp_docker_example/static/css/: tailwind.css
pyapp_docker_example/templates/: base.html
pyapp_docker_example/templates/.well-known/: security.txt
pyapp_docker_example/templates/pages/: home.html
pyapp_docker_example/users/: apps.py  models.py
pyapp_docker_example/users/migrations/: 0001_initial.py
